--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "dev": "ts-node-dev src/index.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.1",
+    "@types/jsonwebtoken": "^9.0.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
   }
