connect data base

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+MONGO_URI=mongodb+srv://omerkugel12:hVsIZ33W9A2Fajwb@cluster0.mszwmyg.mongodb.net/Cart-db?retryWrites=true&w=majority&appName=Cluster0
+
+
 PORT = 3000
 
 SECRET_KEY = omer
